# uor-r4

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  README.md  ROADMAP.md  geometric_prime_router_webapp.html  index.css  index.html  issues.json  run_test.rs  test_response.json  test_response2.json  test_tokenize.rs
crates/uor-r4-core/: Cargo.toml  README.md
crates/uor-r4-core/examples/: b3sum.rs
crates/uor-r4-core/src/: cayley_dickson.rs  lib.rs
crates/uor-r4-core/src/semantic/: manifest.rs  merkle.rs  mod.rs  reasoning.rs  reference.rs  vsa.rs
crates/uor-r4-core/src/transformerless/: anti_degeneracy.rs  bott_fock.rs  cd_space.rs  certificate.rs  certify.rs  command.rs  compare.rs  compiler.rs  convert_r4g1.rs  cover.rs  cover_sweep.rs  endomorphism.rs  fairness_provenance.rs  graph_patch.rs  lie_jordan.rs  mod.rs  observe.rs  observe_text.rs  performance_certificate.rs  predictive_sufficiency.rs  progress.rs  quantum_cover.rs  reference_state.rs  resolution_status.rs  runtime.rs  runtime_state.rs  (+10 more)
crates/uor-r4-core/tests/: allocation_census.rs  anti_degeneracy_test.rs  bott_fock_scaling.rs  cd_space.rs  certificate_test.rs  convert_r4g1.rs  cover.rs  cover_sweep.rs  deterministic_rebuild_test.rs  endomorphism.rs  fairness_provenance_test.rs  graph_patch_test.rs  hierarchical_compiler.rs  interaction_residuals.rs  kappa_reproduction.rs  lie_jordan.rs  observation_anchors.rs  observe.rs  observe_text.rs  operator_registry.rs  performance_certificate_test.rs  predictive_sufficiency_test.rs  resolution_status_test.rs  score.rs  score_q_test.rs  semantic_types_cbor.rs  shortlist_evaluator_test.rs  smollm2_adapter.rs  store_merkle_proofs.rs  trace_lane.rs  transitions_test.rs  vsa_algebra.rs  vsa_conformance.rs  window_paths.rs
crates/uor-r4-graph-certify/: Cargo.toml
crates/uor-r4-graph-certify/src/: certify.rs  compare.rs  fairness_provenance.rs  holographic_encoding.rs  lib.rs  long_context.rs  patch_lifecycle.rs  performance_certificate.rs  predictive_sufficiency.rs  score.rs  score_runtime.rs
crates/uor-r4-graph-certify/tests/: anti_degeneracy_test.rs  certificate_test.rs  fairness_provenance_test.rs  holographic_encoding_test.rs  performance_certificate_test.rs  predictive_sufficiency_test.rs  shortlist_evaluator_test.rs
crates/uor-r4-graph-cli/: Cargo.toml
crates/uor-r4-graph-cli/src/: convert_r4g1.rs  lib.rs  scenarios.rs
crates/uor-r4-graph-compiler/: Cargo.toml
crates/uor-r4-graph-compiler/src/: behavioral_probes.rs  future_state_planner.rs  graph.rs  holographic_encoding.rs  induction.rs  information_bottleneck.rs  lib.rs  lower_semantic_regions.rs  monograph.rs  observation.rs  observation_text.rs  pack.rs  patch_induction.rs  perturbation.rs  quantum_cover.rs  rate_distortion_compression.rs  reference_compiler_ir.rs  residual.rs  routing.rs  semantic_emission_decoupling.rs  semantic_state.rs
crates/uor-r4-graph-compiler/tests/: induction.rs  observe.rs
crates/uor-r4-graph-format/: Cargo.toml  README.md
crates/uor-r4-graph-format/fuzz/: .gitignore  Cargo.toml
crates/uor-r4-graph-format/src/: code.rs  edge_algebras.rs  error.rs  head.rs  header.rs  inference_contract.rs  invariant_ownership.rs  lib.rs  records.rs  rout.rs  scoring_semantics.rs  ser.rs  stage2.rs  types.rs  view.rs
crates/uor-r4-graph-format/tests/: fuzz_smoke.rs  stage1.rs  stage2.rs
crates/uor-r4-proof-model/: Cargo.toml  README.md
crates/uor-r4-proof-model/src/: allocation_proof.rs  deterministic_topk_proof.rs  inference_audit.rs  kani_proofs.rs  lib.rs  pdf_traceability.rs  proof_matrix.rs  range_bounds_proof.rs  structural_guarantees.rs  theorem7_proof.rs
crates/uor-r4-proof-model/tests/: proof_matrix_audit.rs  proof_model_tests.rs
crates/uor-r4-router/: Cargo.toml  README.md
crates/uor-r4-router/src/: benchmark.rs  geometry.rs  lib.rs
crates/uor-r4-router/tests/: ablation_benchmarks.rs  multi_facet_routing.rs  router_facet_indexing.rs  selective_backoff.rs
crates/uor-tless/: Cargo.toml
crates/uor-tless-bindings/: Cargo.toml
crates/uor-tless-bindings/src/: lib.rs
crates/uor-tless/src/: certify.rs  compare.rs  compiler.rs  lib.rs  runtime.rs  scenarios.rs  teacher.rs
crates/uor-tless/tests/: kappa_reproduction.rs  window_paths.rs
uor_standards/UOR-Framework/: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  Cargo.toml  LICENSE  README.md  RELEASING.md  clippy.toml  lake-manifest.json  lakefile.lean  rust-toolchain.toml
uor_standards/UOR-Framework/.cargo/: config.toml
uor_standards/UOR-Framework/cargo-uor/: Cargo.toml  README.md
uor_standards/UOR-Framework/clients/: Cargo.toml
uor_standards/UOR-Framework/codegen/: Cargo.toml
uor_standards/UOR-Framework/conformance/: Cargo.toml  endpoint_coverage.toml
uor_standards/UOR-Framework/docs/: Cargo.toml  theory_deferred.md
uor_standards/UOR-Framework/foundation/: Cargo.toml  README.md
uor_standards/UOR-Framework/lean-codegen/: Cargo.toml
uor_standards/UOR-Framework/lean4/: .uor-unproven.json  README.md  UOR.lean
uor_standards/UOR-Framework/spec/: Cargo.toml  README.md
uor_standards/UOR-Framework/uor-foundation-sdk/: Cargo.toml  README.md
uor_standards/UOR-Framework/uor-foundation-test-helpers/: Cargo.toml
uor_standards/UOR-Framework/uor-foundation-verify/: Cargo.toml  README.md
uor_standards/UOR-Framework/website/: Cargo.toml
uor_standards/UOR-Framework/xtask/: Cargo.toml
uor_standards/prism/: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  justfile
uor_standards/prism/.devcontainer/: devcontainer.json
uor_standards/prism/docs/: README.md
uor_standards/uor-addr/: .gitignore  ANALYSIS.md  ARCHITECTURE.md  CONFORMANCE.md  Cargo.toml  README.md  RELEASING.md  STANDARDS.md  VERIFICATION.md  deny.toml  justfile
uor_standards/uor-addr/.devcontainer/: devcontainer.json
uor_standards/uor-addr/docs/: getting-started.md  realizations.md
uor_standards/uor-addr/tools/: canonical-gguf.py  canonical-onnx.py  gen_nfc_tables.py  sync-versions.py  synth-fixtures.py
uor_standards/uor-addr/uor-addr-lean/: UorAddr.lean  lake-manifest.json  lakefile.lean
(+933 files in other folders)
