[workspace]
members = [
    "crates/uor-r4-core",
    "crates/uor-r4-graph-format",
    "crates/uor-r4-router",
    "crates/uor-r4-proof-model",
]
default-members = [
    ".",
    "crates/uor-r4-core",
    "crates/uor-r4-graph-format",
    "crates/uor-r4-router",
    "crates/uor-r4-proof-model",
]
exclude = ["uor_standards", "crates/uor-r4-graph-format/fuzz"]
resolver = "2"

[package]
name = "uor-r4-wasm-router"
version = "0.1.0"
edition = "2021"
default-run = "r4"
autobins = false

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "r4"
path = "src/main.rs"

[dependencies]
uor-r4-core = { path = "crates/uor-r4-core" }
uor-r4-router = { path = "crates/uor-r4-router" }
uor-addr = { git = "https://github.com/UOR-Foundation/uor-addr.git", rev = "165b51e3e2113ee5d032730cde709335d4fe9b60", default-features = false, features = ["alloc"] }
uor-foundation-sdk = { git = "https://github.com/UOR-Foundation/UOR-Framework.git", rev = "51c01382200b0179d6640b07e9c8119364ab69a1" }
uor-foundation = { git = "https://github.com/UOR-Foundation/UOR-Framework.git", rev = "51c01382200b0179d6640b07e9c8119364ab69a1", default-features = false, features = ["std", "serde"] }
clap = { version = "4.5", default-features = false, features = ["std", "derive", "env", "help", "usage", "error-context"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4.3"
tracing = { version = "0.1", default-features = false, features = ["std"] }
blake3 = "=1.5.0"

[dev-dependencies]
uor-foundation-verify = { git = "https://github.com/UOR-Foundation/UOR-Framework.git", rev = "51c01382200b0179d6640b07e9c8119364ab69a1" }
