[package]
name = "uor-r4-core"
version = "0.1.0"
edition = "2021"
description = "Core R4 engine: geometric routing mathematics and integrated transformerless local inference"

[dependencies]
uor-r4-graph-format = { path = "../uor-r4-graph-format" }
uor-r4-model-source = { path = "../uor-r4-model-source" }
sha2 = "0.10.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4.3"
blake3 = "=1.5.0"
ciborium = "0.2"
uor-r4-graph-runtime = { path = "../uor-r4-graph-runtime" }

[dev-dependencies]
serde_json = "1.0"
proptest = "1.4.0"
