[package]
name = "uor-r4-graph-certify"
version = "0.1.0"
edition = "2021"

[dependencies]
uor-r4-core = { path = "../uor-r4-core" }
uor-r4-graph-format = { path = "../uor-r4-graph-format", default-features = false }
uor-r4-graph-runtime = { path = "../uor-r4-graph-runtime" }
uor-r4-model-source = { path = "../uor-r4-model-source" }
uor-r4-graph-compiler = { path = "../uor-r4-graph-compiler" }

# Certificate formatting and CID hashing
serde = { version = "1.0", features = ["derive"] }
ciborium = "0.2"
blake3 = "1.5"
rayon = "1.10"
