[package]
name = "uor-r4-graph-compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
uor-r4-model-source = { path = "../uor-r4-model-source" }
uor-r4-graph-format = { path = "../uor-r4-graph-format" }
uor-r4-core = { path = "../uor-r4-core" }
rayon = "1.8"
blake3 = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
