[package]
name = "uor-r4-proof-model"
version = "0.1.0"
edition = "2021"
description = "Executable proof specification and formal verification harness for the R4 holographic graph compiler"

[dependencies]
uor-r4-core = { path = "../uor-r4-core" }
uor-r4-graph-format = { path = "../uor-r4-graph-format" }
uor-r4-graph-runtime = { path = "../uor-r4-graph-runtime" }
serde = { version = "1.0", features = ["derive"] }


