[package]
name = "uor-tless-bindings"
version = "0.1.0"
edition = "2021"
description = "UOR rebase of the transformerless engine (uor-tless): TlessAxis prediction axis, shapes, PrismModel implementation, uor-addr content addressing, per-prediction Grounded certificates"

[dependencies]
uor-r4-core = { path = "../uor-r4-core" }
uor-r4-router = { path = "../uor-r4-router" }
uor-tless = { path = "../uor-tless" }
uor-addr = { path = "../../uor_standards/uor-addr/crates/uor-addr", default-features = false, features = ["alloc"] }
uor-foundation = { path = "../../uor_standards/UOR-Framework/foundation", default-features = false, features = ["std", "serde"] }
uor-foundation-sdk = { path = "../../uor_standards/UOR-Framework/uor-foundation-sdk" }

[dev-dependencies]
uor-foundation-verify = { path = "../../uor_standards/UOR-Framework/uor-foundation-verify" }
