[package]
name = "uor-tless"
version = "0.1.0"
edition = "2021"
description = "Cross-compilation of transformer LMs into a multiplication-free, table-native, certifiable inference artifact — migrated from the transformerless repo, rebased under UOR"

[dependencies]
blake3 = "=1.5.0"

[dev-dependencies]
serde_json = "1.0"
