[package]
name = "uor-conformance"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "UOR Framework conformance suite — validates all artifacts against professional standards"
publish = false

[dependencies]
uor-ontology = { path = "../spec" }
uor-codegen = { path = "../codegen" }
uor-lean-codegen = { path = "../lean-codegen" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
cssparser = { workspace = true }
sophia_turtle = { workspace = true }
sophia_api = { workspace = true }
regex = "1"

[dev-dependencies]
uor-ontology = { path = "../spec" }
