[package]
name = "uor-docs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "UOR Foundation documentation generator — produces verified HTML docs and machine-generated README"
publish = false

[dependencies]
uor-ontology = { path = "../spec" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
pulldown-cmark = { workspace = true }
toml = { workspace = true }
