[package]
name = "uor-foundation"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "UOR Foundation — typed Rust traits for the complete ontology. Import and implement."
documentation = "https://docs.rs/uor-foundation"
readme = "README.md"
keywords = ["ontology", "uor", "type-system", "traits", "semantic-web"]
categories = ["data-structures", "science"]

[dependencies]
# Phase H (target §1.6): always-on transcendental math via `libm`.
# `core::f64` exposes only basic arithmetic; `xsd:decimal` observables
# (convergence rate, residual entropy, collapse amplitude, k_B T · ln 2
# pricing at op:OA_5) require `ln` / `exp` / `sqrt`. Gating these behind a
# feature flag was considered and rejected: an observable that exists in
# one build and not another violates the "one surface" discipline.
# `libm` is a small, MIT-licensed, no_std-safe pure-Rust implementation of
# `<math.h>`; it composes transparently with embedded toolchains.
libm = "0.2"

[dev-dependencies]
# v0.2.2 T2.5 (cleanup): test-helpers crate exposing crate-internal
# constructors via a #[doc(hidden)] back-door. Used by integration tests
# that need to build Trace / TraceEvent / MulContext values directly.
uor-foundation-test-helpers = { path = "../uor-foundation-test-helpers" }

[features]
# v0.2.2 Phase H: feature flag layout.
# - `default` stays empty so the foundation is strictly no_std out of the box.
# - `alloc` enables optional alloc-dependent surface (trace serialization).
# - `std` enables optional std-only surface (implies alloc).
# - `serde` enables optional serde integration (implies alloc).
# - `observability` enables optional observability surface (implies alloc).
default = []
alloc = []
std = ["alloc"]
serde = ["alloc"]
observability = ["alloc"]

# docs.rs builds with default-features by default; `all-features = true`
# enables the alloc / serde / observability / std surfaces so the full
# API is visible on docs.rs.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
